[gd_scene load_steps=2 format=3 uid="uid://dhj0tisdfdl26"]

[ext_resource type="Script" uid="uid://cgm8y6e7capwh" path="res://scripts/leaderboard.gd" id="1_lbv8h"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbv8h")
metadata/_custom_type_script = "uid://ejuac7mx5e7s"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Leaderboard"
horizontal_alignment = 1

[node name="ScoreList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
wraparound_items = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RefreshButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
